# ukrdc-fastapi

./: .env.template  .gitignore  .mailmap  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  SECURITY.md  codecov.yml  dev-docker-compose.yaml  mypy.ini  pyproject.toml  radar_missing_RCSLB.csv  run.sh  setversion.sh  tox.ini  tsconfig.json  version.sh
.github/: dependabot.yml
.github/workflows/: auto_release.yml  clients.yml  codeql-analysis.yml  dispatch.yml  main.yml  publish.yml  test.yml  update-pre-commit-hooks.yml
clients/: .gitignore  config.json  generate_spec.py  tsconfig.json
clients/typescript-axios-client/: config.json
clients/ukrdc-axios-client/: README.md  package-lock.json  package.json  tsconfig.json
dev/: Dockerfile
scripts/: ukrdc_dupes.py
scripts/analytics/: analyse_memberships.py  query_memberships.py
scripts/better_error_stats/: main.py
scripts/link_graph_speed_test/: main.py
scripts/reports/: reports_radar_missing_export.py
scripts/sqlite/: create_databases.py
scripts/testing/better_error_stats/: main.py
scripts/testing/link_graph_speed_test/: main.py
scripts/type_9_resolver/: process.py
scripts/ukrdc_dupes/: find.py
tests/: README.md  conftest.py  test_app.py  test_dashboard.py  test_errors.py  test_facilities.py  test_laborders.py  test_linkrecords.py  test_main.py  test_masterrecords.py  test_mirth.py  test_persons.py  test_persons_search.py  test_records.py  test_resultitems.py  test_schemas.py  test_search.py  test_search_masterrecords.py  test_search_persons.py  test_ukrdc_fastapi.py  test_utils.py  test_utils_nhs.py  test_viewer.py  test_viewer_record.py  test_workitems.py  utils.py
tests/responses/: channelGroups.xml  channelStatistics.xml  channels.xml  messageResponse.xml
tests/test_audit/: README.md  test_audit.py  test_audit_facilities.py  test_audit_masterrecords.py  test_audit_messages.py  test_audit_patientrecords.py  test_audit_persons.py  test_audit_search.py  test_audit_workitems.py  test_masterrecords.py  test_persons.py
tests/test_query/: README.md  test_admin.py  test_audit.py  test_codes.py  test_common.py  test_delete.py  test_errors.py  test_facilities.py  test_facility_stats.py  test_laborders.py  test_masterrecords.py  test_medications.py  test_memberships.py  test_messages.py  test_observations.py  test_patientrecords.py  test_persons.py  test_resultitems.py  test_stats.py  test_surveys.py  test_users.py  test_workitems.py
tests/test_query/test_mirth/: test_export.py  test_export_restrictions.py  test_memberships.py  test_merge.py  test_rda.py  test_unlink.py  test_workitems.py
tests/test_query/test_patientrecords/: test_patientrecords.py  test_patientrecords_diagnoses.py
tests/test_routers/: README.md  test_admin.py  test_codes.py  test_dashboard.py  test_empi.py  test_errors.py  test_facilities.py  test_facility_stats.py  test_laborders.py  test_masterrecords.py  test_messages.py  test_mirth.py  test_patientrecords.py  test_persons.py  test_records.py  test_records_delete.py  test_resultitems.py  test_search.py  test_system.py  test_ukrdcid.py  test_workitems.py
tests/test_routers/test_patientrecord/: test_delete.py  test_documents.py  test_export.py  test_laborders.py  test_medications.py  test_observations.py  test_resultitems.py  test_surveys.py  test_treatments.py  test_update.py
tests/test_routers/test_patientrecords/: test_audit.py  test_delete.py  test_diagnoses.py  test_dialysissessions.py  test_documents.py  test_export.py  test_laborders.py  test_medications.py  test_observations.py  test_patientrecord.py  test_resultitems.py  test_surveys.py  test_transplants.py  test_treatments.py  test_update.py
tests/test_routers/test_search/: test_search_masterrecords.py  test_search_patientrecords.py  utils.py
tests/test_tasks/: test_background_tasks.py  test_tasks_utils.py
tests/test_utils/: test_cache.py  test_search.py  test_utils.py
tests/test_utils/test_mirth/: test_mirth.py
ukrdc_fastapi/: README.md  auth.py  config.py  database.py  dependencies.py  exceptions.py  main.py  mirth.py  sorters.py  tasks.py  types.py  utils.py
ukrdc_fastapi/access_models/: empi.py  errorsdb.py  ukrdc.py
ukrdc_fastapi/dependencies/: README.md  __init__.py  audit.py  auth.py  cache.py  database.py  mirth.py  sentry.py
ukrdc_fastapi/dependencies/okta/: __init__.py
ukrdc_fastapi/models/: README.md  audit.py  empi.py  errors.py  errorsdb.py  pkb.py  ukrdc.py  users.py
ukrdc_fastapi/permissions/: facilities.py  masterrecords.py  messages.py  patientrecords.py  persons.py  workitems.py
ukrdc_fastapi/query/: README.md  admin.py  audit.py  codes.py  common.py  dashboard.py  delete.py  errors.py  facilities.py  laborders.py  masterrecords.py  medications.py  memberships.py  messages.py  observations.py  patientrecords.py  persons.py  resultitems.py  stats.py  survey.py  surveys.py  users.py  utils.py  workitems.py
ukrdc_fastapi/query/facilities/: __init__.py  demographics.py  errors.py  reports.py  stats.py
ukrdc_fastapi/query/mirth/: README.md  base.py  export.py  memberships.py  merge.py  rda.py  unlink.py  workitems.py
ukrdc_fastapi/query/patientrecords/: __init__.py  diagnoses.py
ukrdc_fastapi/routers/: README.md  dashboard.py  errors.py  laborders.py  linkrecords.py  patientrecords.py  records.py  resultitems.py  search.py  testing.py  viewer.py  workitems.py
ukrdc_fastapi/routers/api/: __init__.py  codes.py  dashboard.py  empi.py  errors.py  facilities.py  laborders.py  (+9 more)
ukrdc_fastapi/schemas/: README.md  admin.py  audit.py  base.py  code.py  common.py  delete.py  empi.py  errors.py  export.py  facility.py  laborder.py  medication.py  message.py  mirth.py  observation.py  patient.py  patientrecord.py  requests.py  survey.py  treatment.py  user.py
ukrdc_fastapi/tasks/: README.md  background.py  repeated.py  startup.py  utils.py
ukrdc_fastapi/utils/: README.md  __init__.py  cache.py  encoder.py  errors.py  filter.py  filters.py  links.py  mirth.py  nhs.py  paginate.py  records.py  search.py  sort.py  statistics.py  tasks.py
(+98 files in other folders)
