[tool.poetry]
authors = ["Joel Collins <joel.collins@renalregistry.nhs.uk>"]
description = ""
name = "ukrdc-fastapi"
packages = [
  {include = "ukrdc_fastapi"},
]
version = "5.3.4"

[tool.poetry.dependencies]
SQLAlchemy = {version = "<2.0", extras = ["mypy"]} 
fastapi = "^0.110.0" 
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.12.1"} 
httpx = "^0.23.0" 
mirth-client = "^3.0.0" 
okta-jwt-verifier = "^0.2.3" 
psycopg2-binary = "^2.9.5" # Needed for postgres
pydantic = {extras = ["dotenv"], version = "^1.10.1"} 
python = "^3.9" 
python-dateutil = "^2.9.0" 
python-stdnum = "^1.20" 
redis = "^5.0.2" 
sentry-sdk = {extras = ["fastapi"], version = "^1.44.0"} 
single-source = "^0.3.0" 
ukrdc-sqla = "^2.3.0" 
ukrdc-stats = "^1.1.0" 
ukrdc-xsdata = "^3.4.5" 
uvicorn = "^0.29.0" 

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
coverage = {extras = ["toml"], version = "^7.4"}
fakeredis = "2.21.0"
mypy = "^1.9.0"
pre-commit = "^3.7.0"
pytest = "^7.4"
pytest-asyncio = "^0.23.2"
pytest-cov = "^5.0.0"
pytest-httpx = "^0.21"
pytest-mock = "^3.14.0"
pytest-postgresql = "^3.1.1"
ruff = "^0.3.0"
sqlalchemy2-stubs = "*"
tox = "^4.14.0"
types-python-dateutil = "^2.9.0.20240315"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.ruff]

[tool.ruff.format]

[tool.ruff.lint.isort]

[tool.mypy]
plugins = [
  "sqlalchemy.ext.mypy.plugin",
  "pydantic.mypy",
]
exclude = ["tests/", "scripts/"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "stdnum.*",
  "okta_jwt_verifier.*",
  "uvicorn.*",
  "redis.*",
  "matplotlib.*",
  "ukrdc_xsdata.*",
]

[tool.coverage.run]
# Both dependencies and main contain a lot of production-specific code, such as
# real DB connections and Sentry reporting. We can't run these lines in our unit
# tests so we exclude them from coverage reports.
omit = [
  "ukrdc_fastapi/dependencies/*",
  "ukrdc_fastapi/main.py",
  "ukrdc_fastapi/tasks/shutdown.py",
  "ukrdc_fastapi/tasks/repeated.py",
  "ukrdc_fastapi/routers/api/v1/debug.py",
]

[tool.pytest.ini_options]
addopts = "--cov=ukrdc_fastapi"
asyncio_mode = "auto"
minversion = "6.0"
testpaths = [
  "tests",
]

[tool.coverage.report]
exclude_lines = ["raise HTTPException"]
