[tool.poetry]
authors = ["Joel Collins <joel.collins@renalregistry.nhs.uk>"]
description = ""
name = "ukrdc-fastapi"
packages = [
  {include = "ukrdc_fastapi"},
]
version = "5.5.0"

[tool.poetry.dependencies]
SQLAlchemy = {version = ">=2.0,<3"}
fastapi = "^0.115.12"
fastapi-pagination = {extras = ["sqlalchemy"], version = "^0.12.1"}
httpx = "^0.23.0"
mirth-client = "^3.0.0"
okta-jwt-verifier = "^0.2.3"
psycopg2-binary = "^2.9.5" # Needed for postgres
pydantic = {extras = ["dotenv"], version = "^1.10.22"}
python = ">=3.11,<4.0"
python-dateutil = "^2.9.0"
python-stdnum = "^1.20"
redis = "^5.0.2"
sentry-sdk = {extras = ["fastapi"], version = "^1.43.0"}
single-source = "^0.4.0"
ukrdc-stats = "2.0.0"
ukrdc-xsdata = "^3.4.5"
uvicorn = "^0.34.3"
matplotlib = "3.9"
ukrdc-sqla = "2.6.2"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
coverage = {extras = ["toml"], version = "^7.8"}
fakeredis = "2.23.3"
mypy = "^1.16.0"
pre-commit = "^4.2.0"
pytest = "^7.4"
pytest-asyncio = "^0.23.2"
pytest-cov = "^5.0.0"
pytest-httpx = "^0.21"
pytest-mock = "^3.14.0"
pytest-postgresql = "^3.1.1"
ruff = "^0.8.3"
tox = "^4.26.0"
types-python-dateutil = "^2.9.0.20240315"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.ruff]

[tool.ruff.format]

[tool.ruff.lint.isort]

[tool.mypy]
exclude = ["tests/", "scripts/"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "stdnum.*",
  "okta_jwt_verifier.*",
  "uvicorn.*",
  "redis.*",
  "matplotlib.*",
  "ukrdc_xsdata.*",
]

[tool.coverage.run]
# Both dependencies and main contain a lot of production-specific code, such as
# real DB connections and Sentry reporting. We can't run these lines in our unit
# tests so we exclude them from coverage reports.
omit = [
  "ukrdc_fastapi/dependencies/*",
  "ukrdc_fastapi/main.py",
  "ukrdc_fastapi/tasks/shutdown.py",
  "ukrdc_fastapi/tasks/repeated.py",
  "ukrdc_fastapi/routers/api/v1/debug.py",
]

[tool.pytest.ini_options]
addopts = "--cov=ukrdc_fastapi"
asyncio_mode = "auto"
minversion = "6.0"
testpaths = [
  "tests",
]

[tool.coverage.report]
exclude_lines = ["raise HTTPException"]
