[tool.poetry]
authors = ["Joel Collins <joel.collins@renalregistry.nhs.uk>"]
description = ""
name = "ukrdc-fastapi"
packages = [{ include = "ukrdc_fastapi" }]
version = "6.5.1"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
SQLAlchemy = { version = ">=2.0,<3" }
cryptography = "^44.0.1" # Needed to get round this issue https://github.com/okta/okta-jwt-verifier-python/issues/72
fastapi = "^0.116.1"
fastapi-pagination = { extras = ["sqlalchemy"], version = "^ 0.13.2" }
httpx = "^0.23"
matplotlib = "3.10.3"
okta-jwt-verifier = "^0.2.3"
psycopg2-binary = "^2.9.5" # Needed for postgres
pydantic = { extras = ["dotenv"], version = "^1.10.22" }
python-dateutil = "^2.9.0"
python-stdnum = "^2.1"
redis = "^7.1.0"
sentry-sdk = { extras = ["fastapi"], version = "^2.30.0" }
single-source = "^0.4.0"
uvicorn = "^0.35.0"
mirth-client = "^4.1.0"
ukrdc-stats = "^2.11.0"
ukrdc-xsdata = "^3.4.5"
ukrdc-sqla = "^2.6.2"

[tool.poetry.group.dev.dependencies]
bandit = "^1.8.3"
coverage = { extras = ["toml"], version = "^7.8" }
deptry = "*"
fakeredis = "2.31.0"
mypy = "^1.16.0"
pre-commit = "^4.5.0"
pytest = "^7.4"
pytest-asyncio = "^0.23.2"
pytest-cov = "^6.2.1"
pytest-httpx = "^0.21"
pytest-mock = "^3.14.0"
pytest-postgresql = "^3.1.3"
ruff = "^0.14.0"
tox = "^4.30.1"
types-python-dateutil = "^2.9.0.20240315"
openpyxl = "^3.1.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.ruff]

[tool.ruff.format]

[tool.ruff.lint.isort]

[tool.mypy]
exclude = ["tests/", "scripts/"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "stdnum.*",
  "okta_jwt_verifier.*",
  "uvicorn.*",
  "redis.*",
  "matplotlib.*",
  "ukrdc_xsdata.*",
]

[tool.coverage.run]
# Both dependencies and main contain a lot of production-specific code, such as
# real DB connections and Sentry reporting. We can't run these lines in our unit
# tests so we exclude them from coverage reports.
omit = [
  "ukrdc_fastapi/dependencies/*",
  "ukrdc_fastapi/main.py",
  "ukrdc_fastapi/tasks/shutdown.py",
  "ukrdc_fastapi/tasks/repeated.py",
  "ukrdc_fastapi/routers/api/v1/debug.py",
]

[tool.pytest.ini_options]
addopts = "--cov=ukrdc_fastapi"
asyncio_mode = "auto"
minversion = "6.0"
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = ["raise HTTPException"]
